2008-10-24  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/innerIO.ml: [close_in] and [close_out] now use [noop] when closing again/flushing again
	  after the input/output is closed

	* src/core/extlib/IO.ml: [apply_enum] now uses [InnerIO.Input_closed]
	
	* src/core/extlib/IO.ml: [apply_enum] removed one

	* src/toplevel/batteries_help.ml: [browse] now displays an error message in case of problem

	* doc/batteries/documentation.idex: language.idex added

	* doc/batteries/language.idex: created

	* src/toplevel/batteries_help.ml: [help] added

	* src/toplevel/batteries_help.ml: [register] now looks for complete urls

	* src/toplevel/batteries_help.ml: [help*] renamed [man*]

	* Makefile: in [top], now using [ocaml -init]

	* build/odoc_generator_batlib.ml: in [generate_external_index] fixed typo: "mark" replaced with "type"

	* src/toplevel/batteries_help.ml: in [append], when creating new [RefList]s, adding element inside the list

2008-10-23  David Teller  <David.Teller@univ-orleans.fr>

	* src/syntax/pa_batteries/pa_batteries.ml: split [top_phrase] in two

	* Makefile: [DEST_TOP] added
	
	* src/core/batteries_core_threads.ml: [Help] removed

	* src/main/threads/batteries.ml: [Help] removed

	* src/main/nothreads/batteries.ml: [Help] removed

	* src/core/batteries_core.ml: [Help] removed

	* src/core/extlib/IO.mli: [write_u*] documented

	* myocamlbuild.ml: removed unused variables

	* src/core/toolchain.mlpack: [Batteries_help] removed

	* src/main/threads/batteries.mllib: removed useless modules

	* src/main/nothreads/batteries.mllib: removed useless modules

	* src/main/nothreads/batteries.ml: moved [Printexc] to [Control]

	* src/core/extlib.mlpack: [ExtPrintexc] added

	* src/core/batteries_core.ml: [ExtPrintexc.Printexc] replaces baselib [Printexc]

	* src/core/extlib/extPrintexc.ml*: added

	* src/core/toolchain/batteries_help.ml: [register] now catches and prints exceptions
